fix: tablet spacing fixes

--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -19,6 +19,9 @@
   .header__inner {
     margin: 0 5rem;
   }
+  .header__inner {
+    min-height: 12vh;
+  }
 }
 
 @media screen and (max-width: 500px) {
