--- a/common.blocks/hero.css
+++ b/common.blocks/hero.css
@@ -15,6 +15,12 @@
   margin: 0 auto;
 }
 
+@media screen and (max-width: 768px) {
+  .hero__inner {
+    min-height: 81vh;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .hero__inner {
     min-height: 67.5vh;
