--- a/common.blocks/person.css
+++ b/common.blocks/person.css
@@ -63,13 +63,19 @@
   max-width: 230px;
 }
 
-@media screen and (max-width: 764px) {
+@media screen and (max-width: 768px) {
   .person {
-    padding: 1.2rem 2rem;
+    padding: 2.6rem 1.3rem;
+  }
+  .person__desc {
+    max-width: 230px;
   }
 }
 
 @media screen and (max-width: 500px) {
+  .person {
+    padding: 1.2rem 2rem;
+  }
   .person:first-child {
     padding-top: 0;
   }
